<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_top_v"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_alignParentTop="true"
        android:background="@color/title_bg">

        <TextView
            android:id="@+id/exit_tstv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_selector_transparent_to_orange"
            android:gravity="center"
            android:padding="@dimen/dp_3"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/dp_3"
            android:text="@string/measure_register"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_center_v"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title_top_v"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_15"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_pe"
                android:textColor="#A37D3B"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_code"
                android:textColor="#999999"
                android:textSize="@dimen/sp_30"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_tzcode"
                android:textColor="#333333"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_6"
                android:background="@null"
                android:hint="@string/register_etcode" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="#999999" />

            <Button
                android:id="@+id/register_nobt"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@drawable/bg_blue_r10"
                android:text="@string/register_nocode"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_15"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_12">

            <com.haoyue.svhlauncher.keybordview.LabelKeyBordView
                android:id="@+id/label_keybord_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/register_bt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_6"
                android:background="@drawable/bg_blue_r10"
                android:text="@string/register_start"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>