<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_top_v"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_alignParentTop="true"
        android:background="@color/title_bg">

        <TextView
            android:id="@+id/exit_tstv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_selector_transparent_to_orange"
            android:gravity="center"
            android:padding="@dimen/dp_3"
            android:text=" 退出[90s] "
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/dp_3"
            android:text="@string/measure_bmi_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/info_tstv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_selector_transparent_to_orange"
            android:drawableRight="@drawable/iv_down_r"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_5"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_center_v"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title_top_v"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/posture_v"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/dp_12"
            android:layout_weight="4.0"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/posture_imgv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/measure_bmi" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ing_end_content_v"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/dp_16"
            android:layout_weight="2.0"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/result_v"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_60"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp_3">

                <LinearLayout
                    android:id="@+id/result1_v"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_yellow_r10"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/value1_name_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="@dimen/dp_3"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/height"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                    <TextView
                        android:id="@+id/value1_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2.0"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.0"
                        android:singleLine="true"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/value1_dw_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="@dimen/dp_3"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/result2_v"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_red_r10"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textColor="@color/white">

                    <TextView
                        android:id="@+id/value2_name_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="@dimen/dp_3"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/weight"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                    <TextView
                        android:id="@+id/value2_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="2.0"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/value2_dw_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="@dimen/dp_3"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/result3_v"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_blue_r10"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textColor="@color/white">

                    <TextView
                        android:id="@+id/value3_name_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="@dimen/dp_3"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="BMI "
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                    <TextView
                        android:id="@+id/value3_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="2.0"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/value3_dw_tstv"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="@dimen/dp_3"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_10" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="vertical">

                <ViewStub
                    android:id="@+id/stub_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout="@layout/sub_stature_loading" />

                <ViewStub
                    android:id="@+id/stub_msg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout="@layout/sub_stature" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>